[package]
name = "esconnect"
version = "2.0.0"
edition = "2021"
authors = ["VPN Auto Connect Team"]
description = "Automated Endpoint Security VPN connection tool with Telegram integration"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
keyring = "2.3"
inquire = "0.6"
colored = "2.1"
indicatif = "0.17"
directories = "5.0"
base64 = "0.21"
chrono = "0.4"
regex = "1.10"
ctrlc = "3.5.2"
hostname = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
accessibility = "0.2"
accessibility-sys = "0.1"
